// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render english with many picked HF 1`] = `
<div>
  <svg
    height="100"
    style="background-color: white; display: block; margin: auto;"
    viewBox="0 0 950 130"
    width="100%"
  >
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <g
        class="visx-group visx-axis visx-axis-bottom"
        transform="translate(0, 0)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="0"
            x2="0"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="0"
              y="50"
            >
              <tspan
                dy="0em"
                x="0"
              >
                0.0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="272.2678444002289"
            x2="272.2678444002289"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="272.2678444002289"
              y="50"
            >
              <tspan
                dy="0em"
                x="272.2678444002289"
              >
                2.0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="544.5356888004578"
            x2="544.5356888004578"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="544.5356888004578"
              y="50"
            >
              <tspan
                dy="0em"
                x="544.5356888004578"
              >
                4.0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="816.8035332006867"
            x2="816.8035332006867"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="816.8035332006867"
              y="50"
            >
              <tspan
                dy="0em"
                x="816.8035332006867"
              >
                6.0
              </tspan>
            </text>
          </svg>
        </g>
        <line
          class="visx-line visx-axis-line"
          fill="transparent"
          shape-rendering="crispEdges"
          stroke="black"
          stroke-width="2"
          x1="0.5"
          x2="890.5"
          y1="0"
          y2="0"
        />
      </g>
    </g>
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <circle
        cx="663.8226205660899"
        data-testid="circle_Finnmark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="771.7065629186059"
        data-testid="circle_Nordland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="697.3320885023214"
        data-testid="circle_Helgeland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="809.090909090909"
        data-testid="circle_Nord-Trøndelag_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="708.1271791485977"
        data-testid="circle_St. Olav_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="749.1790823289829"
        data-testid="circle_Møre og Romsdal_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="721.0797755500382"
        data-testid="circle_Førde_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.3887713116953"
        data-testid="circle_Bergen_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.8840885255769"
        data-testid="circle_Stavanger_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="729.071371487282"
        data-testid="circle_Østfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="734.1477828669518"
        data-testid="circle_Akershus_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="711.6901370926014"
        data-testid="circle_Lovisenberg_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="635.8610683796052"
        data-testid="circle_Diakonhjemmet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="801.681001903994"
        data-testid="circle_Innlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="678.5187742665598"
        data-testid="circle_Vestre Viken_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="670.1306612038713"
        data-testid="circle_Vestfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="754.8209506777926"
        data-testid="circle_Telemark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="714.3381296843073"
        data-testid="circle_Sørlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="715.185015370126"
        data-testid="circle_Norge_unselected"
        fill="rgba(120, 45, 135, 0.8)"
        r="20"
      />
      <circle
        cx="757.1750512036383"
        data-testid="circle_UNN_selected"
        fill="rgba(3, 63, 133, 0.8)"
        r="20"
      />
      <circle
        cx="728.2237898834915"
        data-testid="circle_Fonna_selected"
        fill="rgba(3, 63, 133, 0.8)"
        r="20"
      />
      <circle
        cx="759.8555698922005"
        data-testid="circle_OUS_selected"
        fill="rgba(3, 63, 133, 0.8)"
        r="20"
      />
    </g>
  </svg>
  <div
    class="legendContainer"
  >
    <ul
      class="legendUL"
    >
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(171, 108, 166, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Referral areas
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(120, 45, 135, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Norway
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(3, 63, 133, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Selected referral areas
      </li>
    </ul>
  </div>
</div>
`;

exports[`Render with another national 1`] = `
<div>
  <svg
    height="100"
    style="background-color: white; display: block; margin: auto;"
    viewBox="0 0 950 130"
    width="100%"
  >
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <g
        class="visx-group visx-axis visx-axis-bottom"
        transform="translate(0, 0)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="0"
            x2="0"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="0"
              y="50"
            >
              <tspan
                dy="0em"
                x="0"
              >
                0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="272.2678444002289"
            x2="272.2678444002289"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="272.2678444002289"
              y="50"
            >
              <tspan
                dy="0em"
                x="272.2678444002289"
              >
                2
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="544.5356888004578"
            x2="544.5356888004578"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="544.5356888004578"
              y="50"
            >
              <tspan
                dy="0em"
                x="544.5356888004578"
              >
                4
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="816.8035332006867"
            x2="816.8035332006867"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="816.8035332006867"
              y="50"
            >
              <tspan
                dy="0em"
                x="816.8035332006867"
              >
                6
              </tspan>
            </text>
          </svg>
        </g>
        <line
          class="visx-line visx-axis-line"
          fill="transparent"
          shape-rendering="crispEdges"
          stroke="black"
          stroke-width="2"
          x1="0.5"
          x2="890.5"
          y1="0"
          y2="0"
        />
      </g>
    </g>
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <circle
        cx="757.1750512036383"
        data-testid="circle_UNN_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="771.7065629186059"
        data-testid="circle_Nordland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="697.3320885023214"
        data-testid="circle_Helgeland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="809.090909090909"
        data-testid="circle_Nord-Trøndelag_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="708.1271791485977"
        data-testid="circle_St. Olav_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="749.1790823289829"
        data-testid="circle_Møre og Romsdal_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="721.0797755500382"
        data-testid="circle_Førde_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.3887713116953"
        data-testid="circle_Bergen_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="728.2237898834915"
        data-testid="circle_Fonna_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.8840885255769"
        data-testid="circle_Stavanger_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="729.071371487282"
        data-testid="circle_Østfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="734.1477828669518"
        data-testid="circle_Akershus_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="759.8555698922005"
        data-testid="circle_OUS_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="711.6901370926014"
        data-testid="circle_Lovisenberg_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="635.8610683796052"
        data-testid="circle_Diakonhjemmet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="801.681001903994"
        data-testid="circle_Innlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="678.5187742665598"
        data-testid="circle_Vestre Viken_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="670.1306612038713"
        data-testid="circle_Vestfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="754.8209506777926"
        data-testid="circle_Telemark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="714.3381296843073"
        data-testid="circle_Sørlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="715.185015370126"
        data-testid="circle_Norge_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="663.8226205660899"
        data-testid="circle_Finnmark_unselected"
        fill="rgba(120, 45, 135, 0.8)"
        r="20"
      />
    </g>
  </svg>
  <div
    class="legendContainer"
  >
    <ul
      class="legendUL"
    >
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(171, 108, 166, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Opptaksområder
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(120, 45, 135, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Norge
      </li>
    </ul>
  </div>
</div>
`;

exports[`Render with many picked HF 1`] = `
<div>
  <svg
    height="100"
    style="background-color: white; display: block; margin: auto;"
    viewBox="0 0 950 130"
    width="100%"
  >
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <g
        class="visx-group visx-axis visx-axis-bottom"
        transform="translate(0, 0)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="0"
            x2="0"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="0"
              y="50"
            >
              <tspan
                dy="0em"
                x="0"
              >
                0,0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="272.2678444002289"
            x2="272.2678444002289"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="272.2678444002289"
              y="50"
            >
              <tspan
                dy="0em"
                x="272.2678444002289"
              >
                2,0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="544.5356888004578"
            x2="544.5356888004578"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="544.5356888004578"
              y="50"
            >
              <tspan
                dy="0em"
                x="544.5356888004578"
              >
                4,0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="816.8035332006867"
            x2="816.8035332006867"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="816.8035332006867"
              y="50"
            >
              <tspan
                dy="0em"
                x="816.8035332006867"
              >
                6,0
              </tspan>
            </text>
          </svg>
        </g>
        <line
          class="visx-line visx-axis-line"
          fill="transparent"
          shape-rendering="crispEdges"
          stroke="black"
          stroke-width="2"
          x1="0.5"
          x2="890.5"
          y1="0"
          y2="0"
        />
      </g>
    </g>
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <circle
        cx="663.8226205660899"
        data-testid="circle_Finnmark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="771.7065629186059"
        data-testid="circle_Nordland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="697.3320885023214"
        data-testid="circle_Helgeland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="809.090909090909"
        data-testid="circle_Nord-Trøndelag_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="708.1271791485977"
        data-testid="circle_St. Olav_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="749.1790823289829"
        data-testid="circle_Møre og Romsdal_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="721.0797755500382"
        data-testid="circle_Førde_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.3887713116953"
        data-testid="circle_Bergen_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.8840885255769"
        data-testid="circle_Stavanger_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="729.071371487282"
        data-testid="circle_Østfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="734.1477828669518"
        data-testid="circle_Akershus_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="711.6901370926014"
        data-testid="circle_Lovisenberg_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="635.8610683796052"
        data-testid="circle_Diakonhjemmet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="801.681001903994"
        data-testid="circle_Innlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="678.5187742665598"
        data-testid="circle_Vestre Viken_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="670.1306612038713"
        data-testid="circle_Vestfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="754.8209506777926"
        data-testid="circle_Telemark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="714.3381296843073"
        data-testid="circle_Sørlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="715.185015370126"
        data-testid="circle_Norge_unselected"
        fill="rgba(120, 45, 135, 0.8)"
        r="20"
      />
      <circle
        cx="757.1750512036383"
        data-testid="circle_UNN_selected"
        fill="rgba(3, 63, 133, 0.8)"
        r="20"
      />
      <circle
        cx="728.2237898834915"
        data-testid="circle_Fonna_selected"
        fill="rgba(3, 63, 133, 0.8)"
        r="20"
      />
      <circle
        cx="759.8555698922005"
        data-testid="circle_OUS_selected"
        fill="rgba(3, 63, 133, 0.8)"
        r="20"
      />
    </g>
  </svg>
  <div
    class="legendContainer"
  >
    <ul
      class="legendUL"
    >
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(171, 108, 166, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Opptaksområder
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(120, 45, 135, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Norge
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(3, 63, 133, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Valgte opptaksområder
      </li>
    </ul>
  </div>
</div>
`;

exports[`Render with picked HF 1`] = `
<div>
  <svg
    height="100"
    style="background-color: white; display: block; margin: auto;"
    viewBox="0 0 950 130"
    width="100%"
  >
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <g
        class="visx-group visx-axis visx-axis-bottom"
        transform="translate(0, 0)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="0"
            x2="0"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="0"
              y="50"
            >
              <tspan
                dy="0em"
                x="0"
              >
                0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="272.2678444002289"
            x2="272.2678444002289"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="272.2678444002289"
              y="50"
            >
              <tspan
                dy="0em"
                x="272.2678444002289"
              >
                2
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="544.5356888004578"
            x2="544.5356888004578"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="544.5356888004578"
              y="50"
            >
              <tspan
                dy="0em"
                x="544.5356888004578"
              >
                4
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="816.8035332006867"
            x2="816.8035332006867"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="816.8035332006867"
              y="50"
            >
              <tspan
                dy="0em"
                x="816.8035332006867"
              >
                6
              </tspan>
            </text>
          </svg>
        </g>
        <line
          class="visx-line visx-axis-line"
          fill="transparent"
          shape-rendering="crispEdges"
          stroke="black"
          stroke-width="2"
          x1="0.5"
          x2="890.5"
          y1="0"
          y2="0"
        />
      </g>
    </g>
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <circle
        cx="663.8226205660899"
        data-testid="circle_Finnmark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="771.7065629186059"
        data-testid="circle_Nordland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="697.3320885023214"
        data-testid="circle_Helgeland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="809.090909090909"
        data-testid="circle_Nord-Trøndelag_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="708.1271791485977"
        data-testid="circle_St. Olav_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="749.1790823289829"
        data-testid="circle_Møre og Romsdal_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="721.0797755500382"
        data-testid="circle_Førde_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.3887713116953"
        data-testid="circle_Bergen_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="728.2237898834915"
        data-testid="circle_Fonna_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.8840885255769"
        data-testid="circle_Stavanger_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="729.071371487282"
        data-testid="circle_Østfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="734.1477828669518"
        data-testid="circle_Akershus_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="759.8555698922005"
        data-testid="circle_OUS_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="711.6901370926014"
        data-testid="circle_Lovisenberg_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="635.8610683796052"
        data-testid="circle_Diakonhjemmet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="801.681001903994"
        data-testid="circle_Innlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="678.5187742665598"
        data-testid="circle_Vestre Viken_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="670.1306612038713"
        data-testid="circle_Vestfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="754.8209506777926"
        data-testid="circle_Telemark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="714.3381296843073"
        data-testid="circle_Sørlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="715.185015370126"
        data-testid="circle_Norge_unselected"
        fill="rgba(120, 45, 135, 0.8)"
        r="20"
      />
      <circle
        cx="757.1750512036383"
        data-testid="circle_UNN_selected"
        fill="rgba(3, 63, 133, 0.8)"
        r="20"
      />
    </g>
  </svg>
  <div
    class="legendContainer"
  >
    <ul
      class="legendUL"
    >
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(171, 108, 166, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Opptaksområder
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(120, 45, 135, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Norge
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(3, 63, 133, 0.8)"
              r="7"
            />
          </svg>
        </div>
        UNN
      </li>
    </ul>
  </div>
</div>
`;

exports[`Standard render 1`] = `
<div>
  <svg
    height="100"
    style="background-color: white; display: block; margin: auto;"
    viewBox="0 0 950 130"
    width="100%"
  >
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <g
        class="visx-group visx-axis visx-axis-bottom"
        transform="translate(0, 0)"
      >
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="0"
            x2="0"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="0"
              y="50"
            >
              <tspan
                dy="0em"
                x="0"
              >
                0
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="272.2678444002289"
            x2="272.2678444002289"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="272.2678444002289"
              y="50"
            >
              <tspan
                dy="0em"
                x="272.2678444002289"
              >
                2
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="544.5356888004578"
            x2="544.5356888004578"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="544.5356888004578"
              y="50"
            >
              <tspan
                dy="0em"
                x="544.5356888004578"
              >
                4
              </tspan>
            </text>
          </svg>
        </g>
        <g
          class="visx-group visx-axis-tick"
          transform="translate(0,-10)"
        >
          <line
            class="visx-line"
            fill="transparent"
            shape-rendering="crispEdges"
            stroke="black"
            stroke-linecap="square"
            stroke-width="2"
            x1="816.8035332006867"
            x2="816.8035332006867"
            y1="0"
            y2="20"
          />
          <svg
            font-size="22"
            style="overflow: visible;"
            x="0"
            y="0"
          >
            <text
              fill="black"
              font-size="22"
              text-anchor="middle"
              transform=""
              x="816.8035332006867"
              y="50"
            >
              <tspan
                dy="0em"
                x="816.8035332006867"
              >
                6
              </tspan>
            </text>
          </svg>
        </g>
        <line
          class="visx-line visx-axis-line"
          fill="transparent"
          shape-rendering="crispEdges"
          stroke="black"
          stroke-width="2"
          x1="0.5"
          x2="890.5"
          y1="0"
          y2="0"
        />
      </g>
    </g>
    <g
      class="visx-group"
      transform="translate(30, 30)"
    >
      <circle
        cx="663.8226205660899"
        data-testid="circle_Finnmark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="757.1750512036383"
        data-testid="circle_UNN_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="771.7065629186059"
        data-testid="circle_Nordland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="697.3320885023214"
        data-testid="circle_Helgeland_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="809.090909090909"
        data-testid="circle_Nord-Trøndelag_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="708.1271791485977"
        data-testid="circle_St. Olav_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="749.1790823289829"
        data-testid="circle_Møre og Romsdal_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="721.0797755500382"
        data-testid="circle_Førde_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.3887713116953"
        data-testid="circle_Bergen_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="728.2237898834915"
        data-testid="circle_Fonna_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="679.8840885255769"
        data-testid="circle_Stavanger_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="729.071371487282"
        data-testid="circle_Østfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="734.1477828669518"
        data-testid="circle_Akershus_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="759.8555698922005"
        data-testid="circle_OUS_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="711.6901370926014"
        data-testid="circle_Lovisenberg_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="635.8610683796052"
        data-testid="circle_Diakonhjemmet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="801.681001903994"
        data-testid="circle_Innlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="678.5187742665598"
        data-testid="circle_Vestre Viken_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="670.1306612038713"
        data-testid="circle_Vestfold_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="754.8209506777926"
        data-testid="circle_Telemark_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="714.3381296843073"
        data-testid="circle_Sørlandet_unselected"
        fill="rgba(171, 108, 166, 0.8)"
        r="20"
      />
      <circle
        cx="715.185015370126"
        data-testid="circle_Norge_unselected"
        fill="rgba(120, 45, 135, 0.8)"
        r="20"
      />
    </g>
  </svg>
  <div
    class="legendContainer"
  >
    <ul
      class="legendUL"
    >
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(171, 108, 166, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Opptaksområder
      </li>
      <li
        class="legendLI"
      >
        <div
          class="legendAnnualVar"
        >
          <svg
            height="20px"
            width="20px"
          >
            <circle
              cx="10"
              cy="10"
              fill="rgba(120, 45, 135, 0.8)"
              r="7"
            />
          </svg>
        </div>
        Norge
      </li>
    </ul>
  </div>
</div>
`;
